--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
-  flutter:
-    sdk: flutter
   d_button: ^0.0.10
   d_info: ^0.2.2
+  d_input: ^0.1.1
   d_method: ^0.0.3
   d_view: ^0.0.3
+  flutter:
+    sdk: flutter
   go_router: ^8.2.0
   http: ^0.13.5
   image_picker: ^0.8.9
@@ -43,10 +44,9 @@ dependencies:
   shared_preferences: ^2.1.2
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
